--- a/src/main/resources/templates/Gacho-home.html
+++ b/src/main/resources/templates/Gacho-home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thyme leaf.org/extras/spring-security" lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Gacho Style</title>
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/4e791167da.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class=" container">
+<div class="container">
   <div class="d-none d-md-block d-lg-none ">
     <div>
       <nav class="mid-nav">
@@ -21,7 +21,7 @@
       </nav>
     </div>
     <div class="main-logo">
-      <img class="gacho-logo" src="/static/images/gacho-logo-2.png" alt="gacho-style-logo" width="598"
+      <img class="gacho-logo" src="../static/images/gacho-logo-2.png" th:src="@{images/gacho-logo-2.png}" alt="gacho-style-logo" width="598"
            height="400px">
       <hr class="my-4">
       <nav class="mid-nav">
@@ -38,7 +38,7 @@
       </iframe>
     </div>
     <div class="row d-flex justify-content-center">
-      <img src="/static/images/zerk-sweater-2.png">
+      <img src="../static/images/zerk-sweater-2.png" th:src="@{images/zerk-sweater-2.png}" alt="Zerk in a sweater">
       <p>Consectetur reprehenderit magnam nostrum quod reprehenderit. Inventore repellat eum facilis illum dolor
         doloribus, eius quibusdam suscipit delectus vitae. Explicabo beatae vitae quos laborum expedita hic,
         maiores ipsa eaque? Nobis repudiandae!</p>
