--- a/src/main/resources/static/css/gacho-style.css
+++ b/src/main/resources/static/css/gacho-style.css
@@ -3,9 +3,20 @@
 /*    margin-left: 27.5em;*/
 /*}*/
 
-.gacho-logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75%;
+body, html {
+    height: 100%;
 }
+
+ .parallax {
+     /* The image used */
+     background-image: url("https://www.adorama.com/alc/wp-content/uploads/2017/08/shutterstock_630161714.jpg");
+
+     /* Set a specific height */
+     height: 100%;
+
+     /* Create the parallax scrolling effect */
+     background-attachment: fixed;
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+ }
