put custom image as main image

--- a/src/main/resources/static/gacho-style.css
+++ b/src/main/resources/static/gacho-style.css
@@ -41,7 +41,7 @@ body, html {
     background-attachment:fixed;
 }
 .pimg1{
-    background-image: url("images/San-Antonio-skyline.jpeg");
+    background-image: url("images/clown-cloud.gif");
     min-height: 100%;
 }
 
@@ -56,7 +56,7 @@ body, html {
 }
 
 .pimg4{
-    background-image: url("images/San-Antonio-skyline.jpeg");
+    background-image: url("images/clown-cloud.gif");
     min-height: 100%;
 }
 .section{
