--- a/src/main/resources/templates/Gacho-home.html
+++ b/src/main/resources/templates/Gacho-home.html
@@ -95,9 +95,9 @@
 </div>
 <div class="pimg1">
     <div class="ptext">
-    <span class="border">
-        Gacho-Style
-    </span>
+<!--    <span class="border">-->
+<!--        Gacho-Style-->
+<!--    </span>-->
     </div>
 </div>
 <section class="section section-light">
@@ -136,9 +136,9 @@
 
 <div class="pimg4">
     <div class="ptext">
-    <span class="border">
-        Gacho-Style
-    </span>
+<!--    <span class="border">-->
+<!--        Gacho-Style-->
+<!--    </span>-->
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
