made top of page button

--- a/src/main/resources/templates/Gacho-home.html
+++ b/src/main/resources/templates/Gacho-home.html
@@ -13,6 +13,8 @@
 
 </head>
 <body>
+<a name="top"></a>
+
 <!--<div class="d-none d-md-block d-lg-none">-->
 <!--    <div class="parallax">-->
 <!--        <div class="container-fluid">-->
@@ -84,6 +86,8 @@
 <!--        </div>-->
 <!--    </div>-->
 <!--</div>-->
+
+
 <div>
     <nav class="top-nav">
         <ul id="links" class="navbar-items  d-flex justify-content-end" >
@@ -139,8 +143,10 @@
 <!--    <span class="border">-->
 <!--        Gacho-Style-->
 <!--    </span>-->
+        <a href="#top">top of page</a>
     </div>
 </div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
