--- a/src/main/resources/templates/Gacho-home.html
+++ b/src/main/resources/templates/Gacho-home.html
@@ -14,80 +14,6 @@
 </head>
 <body>
 <a name="top"></a>
-
-<!--<div class="d-none d-md-block d-lg-none">-->
-<!--    <div class="parallax">-->
-<!--        <div class="container-fluid">-->
-<!--            <div>-->
-<!--                <nav class="top-nav">-->
-<!--                    <ul id="links" class="navbar-items  d-flex justify-content-end">-->
-<!--                        <li class="m-2 d-inline-flex nav-item"><a href="#">ART</a></li>-->
-<!--                        <li class="m-2 d-inline-flex nav-item"><a href="#">MUSIC</a></li>-->
-<!--                        <li class="m-2 d-inline-flex nav-item"><a href="#">CONTACT</a></li>-->
-<!--                    </ul>-->
-<!--                </nav>-->
-<!--            </div>-->
-<!--            <div class="main-logo">-->
-<!--                &lt;!&ndash;      <img class="gacho-logo" src="../static/images/gacho-logo-2.png" th:src="@{images/gacho-logo-2.png}" alt="gacho-style-logo" width="598"&ndash;&gt;-->
-<!--                &lt;!&ndash;           height="400px">&ndash;&gt;-->
-<!--                <hr class="my-4">-->
-<!--                <nav class="mid-nav">-->
-<!--                    <ul id="links-mid" class="navbar-items  d-flex justify-content-between">-->
-<!--                        <li class="p-2 d-inline-flex nav-item"><a href="#">ABOUT</a></li>-->
-<!--                        <li class="p-2 d-inline-flex nav-item"><a href="#">ART</a></li>-->
-<!--                        <li class="p-2 d-inline-flex nav-item"><a href="#">MUSIC</a></li>-->
-<!--                        <li class="p-2 d-inline-flex nav-item"><a href="#">CONTACT</a></li>-->
-<!--                    </ul>-->
-<!--                </nav>-->
-<!--            </div>-->
-<!--            <div class="row">-->
-<!--                <iframe src="/static/pdf/gacho-style-vol2.pdf#toolbar=0" width="100%" height="800px">-->
-<!--                </iframe>-->
-<!--            </div>-->
-<!--            <div class="row d-flex justify-content-center">-->
-<!--                &lt;!&ndash;      <img src="../static/images/zerk-sweater-2.png" th:src="@{images/zerk-sweater-2.png}" alt="Zerk in a sweater">&ndash;&gt;-->
-<!--                <p>Consectetur reprehenderit magnam nostrum quod reprehenderit. Inventore repellat eum facilis illum-->
-<!--                    dolor-->
-<!--                    doloribus, eius quibusdam suscipit delectus vitae. Explicabo beatae vitae quos laborum expedita hic,-->
-<!--                    maiores ipsa eaque? Nobis repudiandae!</p>-->
-<!--            </div>-->
-<!--            &lt;!&ndash;  </div>&ndash;&gt;-->
-<!--            <footer class="page-footer font-small cyan darken-3">-->
-<!--                <div class="container d-flex justify-content-center ">-->
-<!--                    <div class="row">-->
-<!--                        <div class="col-md-12 py-5">-->
-<!--                            <div class="mb-5 flex-center">-->
-<!--                                <a class="fb-ic">-->
-<!--                                    <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
-<!--                                </a>-->
-<!--                                <a class="tw-ic">-->
-<!--                                    <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
-<!--                                </a>-->
-<!--                                <a class="gplus-ic">-->
-<!--                                    <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
-<!--                                </a>-->
-<!--                                <a class="li-ic">-->
-<!--                                    <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
-<!--                                </a>-->
-<!--                                <a class="ins-ic">-->
-<!--                                    <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
-<!--                                </a>-->
-<!--                                <a class="pin-ic">-->
-<!--                                    <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>-->
-<!--                                </a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="footer-copyright text-center py-3">© 2020 Copyright:-->
-<!--                    <a href="#"> Armando Roman</a>-->
-<!--                </div>-->
-<!--            </footer>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-
-
 <div>
     <nav class="top-nav">
         <ul id="links" class="navbar-items  d-flex justify-content-end" >
@@ -138,11 +64,23 @@
     </p>
 </section>
 
-<div class="pimg4">
+<div class="pimg4 d-flex justify-content-center">
+        <video controls class="zerkVideo">
+            <source th:src="@{../../videos/ZERKTRONIC-DONTWORRY.mp4}" src="/static/videos/ZERKTRONIC-DONTWORRY.mp4" type="video/mp4">
+        </video>
+</div>
+
+<section class="section section-dark">
+    <h2>Gacho</h2>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad cumque delectus eligendi excepturi illo inventore ipsum laborum obcaecati possimus, quas quo repellat totam voluptate. Excepturi perferendis placeat quod? Commodi consectetur cupiditate et ipsam neque similique suscipit voluptate. Debitis doloribus earum inventore ipsa optio quas ratione. Aliquid aperiam dolorem eaque mollitia nemo porro unde velit. Adipisci assumenda, atque autem consequatur cumque deleniti eius esse impedit, inventore ipsum iste itaque, maxime minima natus nemo numquam officia perferendis porro possimus praesentium provident ratione reiciendis rem sequi similique temporibus ut veritatis! Adipisci, necessitatibus neque!
+    </p>
+</section>
+<div class="pimg5">
     <div class="ptext">
-<!--    <span class="border">-->
-<!--        Gacho-Style-->
-<!--    </span>-->
+        <!--    <span class="border">-->
+        <!--        Gacho-Style-->
+        <!--    </span>-->
         <a href="#top">top of page</a>
     </div>
 </div>
