changed the background color of the about portion

--- a/src/main/resources/static/gacho-style.css
+++ b/src/main/resources/static/gacho-style.css
@@ -61,7 +61,7 @@ body, html {
 }
 
 .pimg5{
-    background-image: url("images/gacho-dog.jpg");
+    background-image: url("images/clown-cloud.gif");
     min-height: 100%;
 }
 .section{
