--- a/src/main/resources/templates/Gacho-home.html
+++ b/src/main/resources/templates/Gacho-home.html
@@ -30,7 +30,7 @@
 <!--    </span>-->
     </div>
 </div>
-<section class="section section-light">
+<section class="section section-dark">
     <h2>About</h2>
     <p>
         Gacho-Style is a culmination and a celebration of the art, music, and culture of the San Antonio art scene. Striving to showcase the talent of the artists throughout the city, and to give a platform for those artists to be exposed.
