making changes to links

--- a/src/main/resources/templates/Gacho-home.html
+++ b/src/main/resources/templates/Gacho-home.html
@@ -20,6 +20,8 @@
             <li class="m-2 d-inline-flex nav-item"><a href="#">ART</a></li>
             <li class="m-2 d-inline-flex nav-item"><a href="#">MUSIC</a></li>
             <li class="m-2 d-inline-flex nav-item"><a href="#">CONTACT</a></li>
+            <li class="m-2 d-inline-flex nav-item"><a href="shop">SHOP</a></li>
+
         </ul>
     </nav>
 </div>
