--- a/src/main/resources/static/gacho-style.css
+++ b/src/main/resources/static/gacho-style.css
@@ -1,26 +1,3 @@
-/*.gacho-button {*/
-/*    margin-top: 1em;*/
-/*    margin-left: 27.5em;*/
-/*}*/
-
-/*body, html {*/
-/*    height: 100%;*/
-/*}*/
-
-/* .parallax {*/
-/*     !* The image used *!*/
-/*     background-image: url("https://www.adorama.com/alc/wp-content/uploads/2017/08/shutterstock_630161714.jpg");*/
-
-/*     !* Set a specific height *!*/
-/*     height: 100%;*/
-
-/*     !* Create the parallax scrolling effect *!*/
-/*     background-attachment: fixed;*/
-/*     background-position: center;*/
-/*     background-repeat: no-repeat;*/
-/*     background-size: cover;*/
-/* }*/
-
 body, html {
     height: 100%;
     margin:0;
@@ -113,17 +90,17 @@ body, html {
     margin-bottom:0;
 }
 
-/*.ptext .border .trans{*/
-/*    background-color: transparent;*/
-/*}*/
+
 
 .pimg4 .zerkVideo{
     position: absolute;
     width:100%;
     height:100%;
-    /*z-index: -1;*/
 }
 
+.pimg5 a{
+    color: #666;
+}
 @media(min-aspect-ratio: 16/9){
     .zerkVideo{
         width:100%;
@@ -144,19 +121,3 @@ body, html {
     }
 }
 
-
-
-
-/*.parallax {*/
-/*    !* The image used *!*/
-/*    background-image: url("https://www.adorama.com/alc/wp-content/uploads/2017/08/shutterstock_630161714.jpg");*/
-
-/*    !* Set a specific height *!*/
-/*    height: 500px;*/
-
-/*    !* Create the parallax scrolling effect *!*/
-/*    background-attachment: fixed;*/
-/*    background-position: center;*/
-/*    background-repeat: no-repeat;*/
-/*    background-size: cover;*/
-/*}*/
