--- a/src/main/resources/templates/Gacho-home.html
+++ b/src/main/resources/templates/Gacho-home.html
@@ -17,8 +17,9 @@
 <div>
     <nav class="top-nav">
         <ul id="links" class="navbar-items  d-flex justify-content-end" >
-            <li class="m-2 d-inline-flex nav-item"><a href="#">ART</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="#">MUSIC</a></li>
+            <li class="m-2 d-inline-flex nav-item"><a href="art">ART</a></li>
+            <li class="m-2 d-inline-flex nav-item"><a href="magazine">MAGAZINE</a></li>
+            <li class="m-2 d-inline-flex nav-item"><a href="music">MUSIC</a></li>
             <li class="m-2 d-inline-flex nav-item"><a href="#">CONTACT</a></li>
             <li class="m-2 d-inline-flex nav-item"><a href="shop">SHOP</a></li>
 
