--- a/src/main/resources/templates/magazine.html
+++ b/src/main/resources/templates/magazine.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thyme leaf.org/extras/spring-security" lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Shop</title>
+    <title>Magazine</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" type='text/css' th:href="@{/shop.css}">
+    <link rel="stylesheet" type='text/css' th:href="@{/gacho-style.css}">
 
+    <script src="https://kit.fontawesome.com/4e791167da.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div>
     <nav class="top-nav">
         <ul id="links" class="navbar-items  d-flex justify-content-end" >
             <li class="m-2 d-inline-flex nav-item"><a href="art">ART</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="#">CONTACT</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="magazine">MAGAZINE</a></li>
             <li class="m-2 d-inline-flex nav-item"><a href="music">MUSIC</a></li>
+            <li class="m-2 d-inline-flex nav-item"><a href="#">CONTACT</a></li>
+            <li class="m-2 d-inline-flex nav-item"><a href="shop">SHOP</a></li>
             <li class="m-2 d-inline-flex nav-item"><a href="/">HOME</a></li>
         </ul>
     </nav>
 </div>
-<h1>This will be shop page</h1>
-
+<h1>THIS IS MAGAZINE PAGE</h1>
+<iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u9q1w623f2" width="100%" height="480" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen></iframe>
 </body>
 </html>
