--- a/src/main/resources/templates/Gacho-home.html
+++ b/src/main/resources/templates/Gacho-home.html
@@ -7,76 +7,128 @@
     <title>Gacho Style</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-      <link rel="stylesheet" type='text/css' th:href="@{/gacho-style.css}">
+    <link rel="stylesheet" type='text/css' th:href="@{/gacho-style.css}">
 
     <script src="https://kit.fontawesome.com/4e791167da.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
 <a name="top"></a>
-<div>
+<!--mobile navbar-->
+<div class="d-block d-sm-block d-md-block d-lg-none">
+    <header>
+        <nav class="mobile-navbar navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black" width="50px" height="50px"/></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/art">Art</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/magazine">Magazine</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/music">Music</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shop">Shop</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+</div>
+<!--desktop navbar-->
+<div class="d-none d-lg-block d-xl-block">
     <nav class="top-nav">
-        <ul id="links" class="navbar-items  d-flex justify-content-end" >
+        <ul id="links" class="navbar-items  d-flex justify-content-end">
             <li class="m-2 d-inline-flex nav-item"><a href="art">ART</a></li>
             <li class="m-2 d-inline-flex nav-item"><a href="magazine">MAGAZINE</a></li>
             <li class="m-2 d-inline-flex nav-item"><a href="music">MUSIC</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="#">CONTACT</a></li>
             <li class="m-2 d-inline-flex nav-item"><a href="shop">SHOP</a></li>
-
         </ul>
     </nav>
 </div>
+
 <div class="pimg1">
     <div class="ptext">
-<!--    <span class="border">-->
-<!--        Gacho-Style-->
-<!--    </span>-->
+        <!--    <span class="border">-->
+        <!--        Gacho-Style-->
+        <!--    </span>-->
     </div>
 </div>
 <section class="section section-dark">
     <h2>About</h2>
     <p>
-        Gacho-Style is a culmination and a celebration of the art, music, and culture of the San Antonio art scene. Striving to showcase the talent of the artists throughout the city, and to give a platform for those artists to be exposed.
+        Gacho-Style is a culmination and a celebration of the art, music, and culture of the San Antonio art scene.
+        Striving to showcase the talent of the artists throughout the city, and to give a platform for those artists to
+        be exposed.
     </p>
 </section>
 <div class="pimg2">
     <div class="ptext">
-<!--    <span class="border">-->
-<!--   </span>-->
+        <!--    <span class="border">-->
+        <!--   </span>-->
     </div>
 </div>
 
- <section class="section section-dark">
-     <h2>Gacho Style Magazine</h2>
-     <p>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad cumque delectus eligendi excepturi illo inventore ipsum laborum obcaecati possimus, quas quo repellat totam voluptate. Excepturi perferendis placeat quod? Commodi consectetur cupiditate et ipsam neque similique suscipit voluptate. Debitis doloribus earum inventore ipsa optio quas ratione. Aliquid aperiam dolorem eaque mollitia nemo porro unde velit. Adipisci assumenda, atque autem consequatur cumque deleniti eius esse impedit, inventore ipsum iste itaque, maxime minima natus nemo numquam officia perferendis porro possimus praesentium provident ratione reiciendis rem sequi similique temporibus ut veritatis! Adipisci, necessitatibus neque!
-     </p>
- </section>
+<section class="section section-dark">
+    <h2>Gacho Style Magazine</h2>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad cumque delectus eligendi excepturi illo inventore
+        ipsum laborum obcaecati possimus, quas quo repellat totam voluptate. Excepturi perferendis placeat quod? Commodi
+        consectetur cupiditate et ipsam neque similique suscipit voluptate. Debitis doloribus earum inventore ipsa optio
+        quas ratione. Aliquid aperiam dolorem eaque mollitia nemo porro unde velit. Adipisci assumenda, atque autem
+        consequatur cumque deleniti eius esse impedit, inventore ipsum iste itaque, maxime minima natus nemo numquam
+        officia perferendis porro possimus praesentium provident ratione reiciendis rem sequi similique temporibus ut
+        veritatis! Adipisci, necessitatibus neque!
+    </p>
+</section>
 
 <div class="pimg3">
     <div class="ptext">
-<!--    <span class="border">-->
-<!--    </span>-->
+        <!--    <span class="border">-->
+        <!--    </span>-->
     </div>
 </div>
 
 <section class="section section-dark">
     <h2>Gacho Music</h2>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad cumque delectus eligendi excepturi illo inventore ipsum laborum obcaecati possimus, quas quo repellat totam voluptate. Excepturi perferendis placeat quod? Commodi consectetur cupiditate et ipsam neque similique suscipit voluptate. Debitis doloribus earum inventore ipsa optio quas ratione. Aliquid aperiam dolorem eaque mollitia nemo porro unde velit. Adipisci assumenda, atque autem consequatur cumque deleniti eius esse impedit, inventore ipsum iste itaque, maxime minima natus nemo numquam officia perferendis porro possimus praesentium provident ratione reiciendis rem sequi similique temporibus ut veritatis! Adipisci, necessitatibus neque!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad cumque delectus eligendi excepturi illo inventore
+        ipsum laborum obcaecati possimus, quas quo repellat totam voluptate. Excepturi perferendis placeat quod? Commodi
+        consectetur cupiditate et ipsam neque similique suscipit voluptate. Debitis doloribus earum inventore ipsa optio
+        quas ratione. Aliquid aperiam dolorem eaque mollitia nemo porro unde velit. Adipisci assumenda, atque autem
+        consequatur cumque deleniti eius esse impedit, inventore ipsum iste itaque, maxime minima natus nemo numquam
+        officia perferendis porro possimus praesentium provident ratione reiciendis rem sequi similique temporibus ut
+        veritatis! Adipisci, necessitatibus neque!
     </p>
 </section>
 
 <div class="pimg4 d-flex justify-content-center">
-        <video controls class="zerkVideo">
-            <source th:src="@{../../videos/ZERKTRONIC-DONTWORRY.mp4}" src="/static/videos/ZERKTRONIC-DONTWORRY.mp4" type="video/mp4">
-        </video>
+    <video controls class="zerkVideo">
+        <source th:src="@{../../videos/ZERKTRONIC-DONTWORRY.mp4}" src="/static/videos/ZERKTRONIC-DONTWORRY.mp4"
+                type="video/mp4">
+    </video>
 </div>
 
 <section class="section section-dark">
     <h2>Gacho</h2>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad cumque delectus eligendi excepturi illo inventore ipsum laborum obcaecati possimus, quas quo repellat totam voluptate. Excepturi perferendis placeat quod? Commodi consectetur cupiditate et ipsam neque similique suscipit voluptate. Debitis doloribus earum inventore ipsa optio quas ratione. Aliquid aperiam dolorem eaque mollitia nemo porro unde velit. Adipisci assumenda, atque autem consequatur cumque deleniti eius esse impedit, inventore ipsum iste itaque, maxime minima natus nemo numquam officia perferendis porro possimus praesentium provident ratione reiciendis rem sequi similique temporibus ut veritatis! Adipisci, necessitatibus neque!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad cumque delectus eligendi excepturi illo inventore
+        ipsum laborum obcaecati possimus, quas quo repellat totam voluptate. Excepturi perferendis placeat quod? Commodi
+        consectetur cupiditate et ipsam neque similique suscipit voluptate. Debitis doloribus earum inventore ipsa optio
+        quas ratione. Aliquid aperiam dolorem eaque mollitia nemo porro unde velit. Adipisci assumenda, atque autem
+        consequatur cumque deleniti eius esse impedit, inventore ipsum iste itaque, maxime minima natus nemo numquam
+        officia perferendis porro possimus praesentium provident ratione reiciendis rem sequi similique temporibus ut
+        veritatis! Adipisci, necessitatibus neque!
     </p>
 </section>
 <div class="pimg5">
