--- a/src/main/resources/templates/Gacho-home.html
+++ b/src/main/resources/templates/Gacho-home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type='text/css' th:href="@{/gacho-style.css}">
+    <link rel="stylesheet" type='text/css' th:href="@{/navbar.css}">
 
     <script src="https://kit.fontawesome.com/4e791167da.js" crossorigin="anonymous"></script>
 
@@ -17,8 +18,8 @@
 <!--mobile navbar-->
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <header>
-        <nav class="mobile-navbar navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black" width="50px" height="50px"/></a>
+        <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="50px" height="50px"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -48,11 +49,12 @@
 <!--desktop navbar-->
 <div class="d-none d-lg-block d-xl-block">
     <nav class="top-nav">
-        <ul id="links" class="navbar-items  d-flex justify-content-end">
-            <li class="m-2 d-inline-flex nav-item"><a href="art">ART</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="magazine">MAGAZINE</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="music">MUSIC</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="shop">SHOP</a></li>
+        <ul id="links">
+            <li><a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="100px" height="100px"/></a></li>
+            <li><a href="art">ART</a></li>
+            <li><a href="magazine">MAGAZINE</a></li>
+            <li><a href="music">MUSIC</a></li>
+            <li><a href="shop">SHOP</a></li>
         </ul>
     </nav>
 </div>
