--- a/src/main/resources/templates/magazine.html
+++ b/src/main/resources/templates/magazine.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type='text/css' th:href="@{/magazine.css}">
-
+    <link rel="stylesheet" type='text/css' th:href="@{/navbar.css}">
     <script src="https://kit.fontawesome.com/4e791167da.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <!--mobile navbar-->
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <header>
-        <nav class="mobile-navbar navbar navbar-expand-lg navbar-dark">
+        <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="/">Gacho-Style</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,13 +42,13 @@
 </div>
 <!--desktop navbar-->
 <div class="d-none d-lg-block d-xl-block">
-    <nav class="top-nav">
-        <ul id="links" class="navbar-items  d-flex justify-content-end" >
-            <li class="m-2 d-inline-flex nav-item"><a href="art">ART</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="music">MUSIC</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="#">CONTACT</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="shop">SHOP</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="/">HOME</a></li>
+    <nav class="top-nav navbar-light bg-light">
+        <ul id="links">
+            <li><a class="navbar-brand logo" href="/" ><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="100px" height="100px"/></a></li>
+            <li><a href="art"><img th:src="@{/images/art-icon.png}" title="Art Icon" width="100px" height="100px"/></a></li>
+            <li><a href="magazine">MAGAZINE</a></li>
+            <li><a href="music">MUSIC</a></li>
+            <li><a href="shop">SHOP</a></li>
         </ul>
     </nav>
 </div>
