--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -10,18 +10,37 @@
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type='text/css' th:href="@{/music.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/navbar.css}">
+    <link rel="stylesheet" type='text/css' th:href="@{/catLoader.css}">
+
+    <script>
+        window.addEventListener("load", function(){
+            const loader = document.querySelector(".loader");
+            loader.className += " hidden";
+        })
+    </script>
 </head>
 <body>
+<div class="loader">
+    <img th:src="@{/images/LoadingCat.gif}"  alt="loading-cat">
+    <h3>Loading...</h3>
+</div>
+<section>
+    <div class="d-block d-sm-block d-md-block d-lg-none">
+        <header>
+            <nav th:insert="partials/mobile-music-navbar :: mobile-music-navbar"/>
+        </header>
+    </div>
+</section>
 <section>
     <div class="d-none d-lg-block d-xl-block">
-        <nav class="top-nav navbar-light bg-light">
+        <nav class="top-nav navbar-light bg-color">
             <ul id="links">
                 <li><a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="100px" height="100px"/></a></li>
-                <li><a href="art"><img th:src="@{/images/art-icon.png}" title="Art Icon" width="100px" height="100px"/></a>
+                <li><a href="art"><img th:src="@{/Links/art-icon.png}" title="Art Icon" width="90" height="36"/></a>
                 </li>
-                <li><a href="magazine"><img th:src="@{/Links/Zine.png}" title="Zine icon" width="50px" height="50px"/></a></li>
-                <li><a href="music"><img th:src="@{/Links/music.png}" title="Muisc icon" width="50px" height="50px"/></a></li>
-                <li><a href="shop"><img th:src="@{/Links/shop.png}" title="shop icon" width="100px" height="100px"/></a></li>
+                <li><a href="magazine"><img th:src="@{/Links/Zine.png}" title="Zine icon" width="90px" height="36px"/></a></li>
+                <li><a href="music"><img th:src="@{/Links/music.png}" title="Muisc icon" width="90px" height="36px"/></a></li>
+                <li><a href="shop"><img th:src="@{/Links/shop.png}" title="shop icon" width="90" height="36"/></a></li>
             </ul>
         </nav>
     </div>
@@ -87,7 +106,7 @@
                 </li>
             </ul>
             <div class="card-body">
-                <ul>
+                <ul class="mediaLinks">
                     <li><a class="spotifyLink" href="#"><img th:src="@{/Links/spotify-logo.png}" title="Spotify Link" width="100px" height="100px"/></a></li>
                     <li><a class="qppleLink" href="#"><img th:src="@{/Links/AppleMusic-logo.png}" title="Apple Link" width="100px" height="100px"/></a></li>
                 </ul>
@@ -95,5 +114,15 @@
         </div>
     </div>
 </section>
+
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </html>
