--- a/src/main/resources/templates/magazine.html
+++ b/src/main/resources/templates/magazine.html
@@ -10,7 +10,16 @@
     <link rel="stylesheet" type='text/css' th:href="@{/magazine.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/navbar.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/catLoader.css}">
-
+    <script>
+        window.addEventListener("load", function () {
+            const loader = document.querySelector(".loader");
+            loader.className += " hidden";
+        })
+        window.addEventListener("load", function () {
+            const loader = document.querySelector(".mobileLoader");
+            loader.className += " mobileHidden";
+        })
+    </script>
     <script src="https://kit.fontawesome.com/4e791167da.js" crossorigin="anonymous"></script>
     <script>
         window.addEventListener("load", function(){
@@ -20,15 +29,21 @@
     </script>
 </head>
 <body>
-<div class="loader">
-    <img th:src="@{/images/LoadingCat.gif}"  alt="loading-cat">
-    <h3>Loading...</h3>
+<div class="d-block d-sm-block d-md-block d-lg-none">
+    <div class="mobileLoader">
+        <img th:src="@{/images/LoadingCat.gif}" alt="loading-cat" height="50%" width="225%">
+    </div>
+</div>
+<div class="d-none d-lg-block d-xl-block">
+    <div class="loader">
+        <img th:src="@{/images/LoadingCat.gif}" alt="loading-cat">
+    </div>
 </div>
 <!--mobile navbar-->
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <header>
         <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">Gacho-Style</a>
+            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="50px" height="50px"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
