--- a/src/main/resources/static/catLoader.css
+++ b/src/main/resources/static/catLoader.css
@@ -3,6 +3,7 @@
     z-index: 99;
     top: 0;
     left: 0;
+    margin-left: auto;
     width: 100%;
     height: 100%;
     display: flex;
@@ -21,4 +22,23 @@
         opacity: 0;
         visibility: hidden;
     }
+}
+
+    .mobileLoader{
+        position:fixed;
+        z-index: 99;
+        top: 0;
+        left: 0;
+        margin-left: auto;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+    }
+
+.mobileLoader.mobileHidden{
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
 }
