--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -11,18 +11,28 @@
     <link rel="stylesheet" type='text/css' th:href="@{/music.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/navbar.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/catLoader.css}">
-
+    <script src="https://kit.fontawesome.com/4e791167da.js" crossorigin="anonymous"></script>
     <script>
         window.addEventListener("load", function(){
             const loader = document.querySelector(".loader");
             loader.className += " hidden";
         })
+        window.addEventListener("load", function () {
+            const loader = document.querySelector(".mobileLoader");
+            loader.className += " mobileHidden";
+        })
     </script>
 </head>
 <body>
-<div class="loader">
-    <img th:src="@{/images/LoadingCat.gif}"  alt="loading-cat">
-    <h3>Loading...</h3>
+<div class="d-block d-sm-block d-md-block d-lg-none">
+    <div class="mobileLoader">
+        <img th:src="@{/images/LoadingCat.gif}" alt="loading-cat" height="50%" width="225%">
+    </div>
+</div>
+<div class="d-none d-lg-block d-xl-block">
+    <div class="loader">
+        <img th:src="@{/images/LoadingCat.gif}" alt="loading-cat">
+    </div>
 </div>
 <section>
     <div class="d-block d-sm-block d-md-block d-lg-none">
@@ -47,7 +57,7 @@
 </section>
 <section>
     <div class="albumCard d-flex justify-content-center">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 20rem; height: 45rem">
             <img class="card-img-top" th:src="@{/dontworry/Zerktronic-Album-coverDontWorry_080720.jpg}"
                  alt="Dont worry cover album">
                 <div class="albumInfo">
@@ -105,11 +115,16 @@
                     </audio>
                 </li>
             </ul>
-            <div class="card-body">
-                <ul class="mediaLinks">
-                    <li><a class="spotifyLink" href="#"><img th:src="@{/Links/spotify-logo.png}" title="Spotify Link" width="100px" height="100px"/></a></li>
-                    <li><a class="qppleLink" href="#"><img th:src="@{/Links/AppleMusic-logo.png}" title="Apple Link" width="100px" height="100px"/></a></li>
-                </ul>
+            <div class="card-body mediaLinks">
+                    <a class="btn spotifyLink" href="#">
+                        <i class="fab fa-spotify fa-3x"></i>
+                    </a>
+                <a class="btn spotifyLink" href="#">
+                    <i class="fab fa-apple fa-3x"></i>
+                </a>
+                <a class="btn spotifyLink" href="#">
+                    <i class="fab fa-youtube fa-3x"></i>
+                </a>
             </div>
         </div>
     </div>
